--- a/pages/1429.html
+++ b/pages/1429.html
@@ -310,7 +310,7 @@ margin-left: 0em;
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body><svg width="10em" height="10em" viewBox="-30 -10 160 150" xmlns="http://www.w3.org/2000/svg">
+<body><svg xmlns="http://www.w3.org/2000/svg">
  <desc>Comma square</desc>
  <defs>
   <marker id="svg295arrowhead" viewBox="0 0 10 10" refX="0" refY="5" markerUnits="strokeWidth" markerWidth="8" markerHeight="5" orient="auto">
@@ -408,14 +408,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December 28, 2018 at 03:38:15.
+  Last revised on December 28, 2018 at 04:33:35.
   See the <a href="https://ncatlab.org/nlab/history/comma object &gt; 2cell" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/comma+object+%3E+2cell" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/comma+object+%3E+2cell/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/comma+object+%3E+2cell" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/comma+object+%3E+2cell" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/comma+object+%3E+2cell" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/comma+object+%3E+2cell/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/comma+object+%3E+2cell" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/comma+object+%3E+2cell" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/comma object &gt; 2cell/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
