--- a/pages/2626.html
+++ b/pages/2626.html
@@ -913,7 +913,142 @@ margin-left: 0em;
 
 <h2 id="example">Example</h2>
 
-<p>The trefoil knot is the simplest non-trivial knot. In its simplest representation, it has three crossings. It is a <a class="existingWikiWord" href="/nlab/show/torus+knot">torus knot</a>, that is it can be embedded on the surface of a solid torus, itself embedded in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>3</mn></msup></mrow><annotation encoding="application/x-tex">S^3</annotation></semantics></math>. Here is a <a class="existingWikiWord" href="/nlab/show/trefoil+knot+-+SVG">picture</a>.</p>
+<p>The trefoil knot is the simplest non-trivial knot. In its simplest representation, it has three crossings. It is a <a class="existingWikiWord" href="/nlab/show/torus+knot">torus knot</a>, that is it can be embedded on the surface of a solid torus, itself embedded in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>S</mi> <mn>3</mn></msup></mrow><annotation encoding="application/x-tex">S^3</annotation></semantics></math>. Here is a picture.</p>
+
+<div style="text-align:center"><div>
+<svg xmlns:xlink="http://www.w3.org/1999/xlink" width="147.76074pt" height="128.23235pt" viewBox="-73.88037 -64.76646 147.76074 128.23235 " xmlns="http://www.w3.org/2000/svg"> 
+<g transform="translate(0, 63.46588 ) scale(1,-1) translate(0,64.76646 )"> 
+                        <g> 
+ <g stroke="rgb(0.0%,0.0%,0.0%)"> 
+ <g fill="rgb(0.0%,0.0%,0.0%)"> 
+ <g stroke-width="0.4pt"> 
+ <g> 
+ </g> 
+ <g> 
+ <g> 
+ <g> 
+ <g stroke="rgb(100.0%,0.0%,0.0%)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <g stroke-width="2.0pt"> 
+ <g> 
+ <g> 
+ <g transform="matrix(1.0,0.0,0.0,1.0,0.0,-28.45274)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <text style="stroke:none" transform="scale(1,-1) translate(0.0,0)" text-anchor="middle" font-size="10"> 
+</text> 
+</g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ <g> 
+ <g> 
+ <g stroke="rgb(100.0%,0.0%,0.0%)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <g stroke-width="2.0pt"> 
+ <g> 
+ <g> 
+ <g transform="matrix(-0.5,0.86603,-0.86603,-0.5,24.64085,14.22636)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <text style="stroke:none" transform="scale(1,-1) translate(0.0,0)" text-anchor="middle" font-size="10"> 
+</text> 
+</g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ <g> 
+ <g> 
+ <g stroke="rgb(100.0%,0.0%,0.0%)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <g stroke-width="2.0pt"> 
+ <g> 
+ <g> 
+ <g transform="matrix(-0.5,-0.86603,0.86603,-0.5,-24.64085,14.22636)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <text style="stroke:none" transform="scale(1,-1) translate(0.0,0)" text-anchor="middle" font-size="10"> 
+</text> 
+</g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ <g> 
+ <g stroke="rgb(100.0%,0.0%,0.0%)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <g stroke-width="2.0pt"> 
+ <path d=" M  -2.2071 -26.24564 C  -8.82843 -19.62431 -21.40941 2.16649 -24.64085 14.22636  " style="fill:none"></path> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ <g> 
+ <g stroke="rgb(100.0%,0.0%,0.0%)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <g stroke-width="2.0pt"> 
+ <path d=" M  0.0 -28.45274 C  -35.31372 -63.76646 -72.88037 1.30057 -27.65584 13.41844  " style="fill:none"></path> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ <g> 
+ <g stroke="rgb(100.0%,0.0%,0.0%)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <g stroke-width="2.0pt"> 
+ <path d=" M  23.833 11.21141 C  21.40941 2.16649 8.82843 -19.62431 0.0 -28.45274  " style="fill:none"></path> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ <g> 
+ <g stroke="rgb(100.0%,0.0%,0.0%)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <g stroke-width="2.0pt"> 
+ <path d=" M  24.64085 14.22636 C  72.88037 1.30057 35.31372 -63.76646 2.20717 -30.65985  " style="fill:none"></path> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ <g> 
+ <g stroke="rgb(100.0%,0.0%,0.0%)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <g stroke-width="2.0pt"> 
+ <path d=" M  -21.6259 15.03423 C  -12.58098 17.45781 12.58098 17.45781 24.64085 14.22636  " style="fill:none"></path> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ <g> 
+ <g stroke="rgb(100.0%,0.0%,0.0%)"> 
+ <g fill="rgb(100.0%,0.0%,0.0%)"> 
+ <g stroke-width="2.0pt"> 
+ <path d=" M  -24.64085 14.22636 C  -37.56665 62.46588 37.56665 62.46588 25.44868 17.24138  " style="fill:none"></path> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ <g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ </g> 
+ 
+                                            </g> 
+</svg></div></div>
 
 <p>Classifying knots up to isotopy is usually done using <a class="existingWikiWord" href="/nlab/show/knot+invariant">knot invariants</a>. Some of these are simple to define (these tend to be geometric and also tend to be hard to calculate) others are harder to define and to show they are invariants but are easier to calculate. A few are reasonably easy to define and to calculate… Yippee!</p>
 
@@ -1054,14 +1189,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  2, 2018 at 18:35:19.
+  Last revised on December 28, 2018 at 04:39:08.
   See the <a href="https://ncatlab.org/nlab/history/knot" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/knot" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/knot/30" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(30 revisions)</span> | <a href="/nlab/show/diff/knot" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/knot" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/knot" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/knot/31" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(31 revisions)</span> | <a href="/nlab/show/diff/knot" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/knot" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/knot/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
