--- a/pages/8209.html
+++ b/pages/8209.html
@@ -1163,6 +1163,10 @@ margin-left: 0em;
 <li>
 <p>Brett McInnes, <em>Holography of the Quark Matter Triple Point</em> (<a href="http://arxiv.org/abs/0910.4456">arXiv:0910.4456</a>)</p>
 </li>
+
+<li>
+<p>Sara Heshmatian, Razieh Morad, <em>Jet suppression in non-conformal plasma using AdS/CFT</em> (<a href="https://arxiv.org/abs/1812.09374">arXiv:1812.09374</a>)</p>
+</li>
 </ul>
 </body></html>
 
@@ -1170,14 +1174,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  4, 2018 at 10:10:15.
+  Last revised on December 28, 2018 at 04:52:37.
   See the <a href="https://ncatlab.org/nlab/history/quark-gluon plasma" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quark-gluon+plasma" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quark-gluon+plasma/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/quark-gluon+plasma" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quark-gluon+plasma" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quark-gluon plasma/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
