--- a/pages/8928.html
+++ b/pages/8928.html
@@ -317,7 +317,13 @@ margin-left: 0em;
 
 <h4 id="gravity">Gravity</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></strong></p><h2 id="formalism">Formalism</h2><ul>
+<div class="hide"><div>
+
+<p><strong><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></strong></p>
+
+<h2 id="formalism">Formalism</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Poincar%C3%A9+Lie+algebra">Poincaré Lie algebra</a></p>
 
@@ -343,7 +349,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="definition">Definition</h2><ul>
+</ul>
+
+<h2 id="definition">Definition</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Einstein-Hilbert+action">Einstein-Hilbert action</a>, <a class="existingWikiWord" href="/nlab/show/Einstein%27s+equations">Einstein's equations</a>, <a class="existingWikiWord" href="/nlab/show/general+relativity">general relativity</a></p>
 
@@ -357,7 +367,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="spacetime_configurations">Spacetime configurations</h2><ul>
+</ul>
+
+<h2 id="spacetime_configurations">Spacetime configurations</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/spacetime">spacetime</a></p>
 </li>
@@ -379,7 +393,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h2 id="properties">Properties</h2><ul>
+</ul>
+
+<h2 id="properties">Properties</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Kaluza-Klein+mechanism">Kaluza-Klein mechanism</a></p>
 </li>
@@ -399,7 +417,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/weak+gravity+conjecture">weak gravity conjecture</a></p>
 </li>
-</ul><h2 id="spacetimes">Spacetimes</h2><ul>
+</ul>
+
+<h2 id="spacetimes">Spacetimes</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/standard+model+of+cosmology">standard model of cosmology</a></p>
 </li>
@@ -407,9 +429,13 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a></p>
 </li>
-</ul><table><thead><tr><th><strong> </strong></th><th>vanishing </th><th>positive </th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-<tr><td style="text-align: left;"><strong>positive </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-</tbody></table><ul>
+</ul>
+
+<table><thead><tr><th><strong><a class="existingWikiWord" href="/nlab/show/black+hole">black hole</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a></strong></th><th>vanishing <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th><th><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Schwarzschild+spacetime">Schwarzschild spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr+spacetime">Kerr spacetime</a></td></tr>
+<tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Reissner-Nordstrom+spacetime">Reissner-Nordstrom spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr-Newman+spacetime">Kerr-Newman spacetime</a></td></tr>
+</tbody></table>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/asymptotically+flat+spacetime">asymptotically flat spacetime</a></p>
 </li>
@@ -457,7 +483,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></p>
 </li>
-</ul><h2 id="quantum_theory">Quantum theory</h2><ul>
+</ul>
+
+<h2 id="quantum_theory">Quantum theory</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></p>
 
@@ -471,11 +501,13 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul></div>
+</ul>
+</div></div>
 
 <h4 id="string_theory">String theory</h4>
 
-<div class="hide"><ul>
+<div class="hide"><div>
+<ul>
 <li>
 <p><strong><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong></p>
 </li>
@@ -483,7 +515,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/books+about+string+theory">books about string theory</a></p>
 </li>
-</ul><h3 id="ingredients">Ingredients</h3><ul>
+</ul>
+
+<h3 id="ingredients">Ingredients</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a></p>
 </li>
@@ -503,7 +539,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/gravity">gravity</a>, <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>, <a class="existingWikiWord" href="/nlab/show/Yang-Mills+theory">Yang-Mills theory</a>, <a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a></li>
 </ul>
 </li>
-</ul><h3 id="critical_string_models">Critical string models</h3><ul>
+</ul>
+
+<h3 id="critical_string_models">Critical string models</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/heterotic+string+theory">heterotic string theory</a></p>
 
@@ -583,7 +623,11 @@ margin-left: 0em;
 <li><a class="existingWikiWord" href="/nlab/show/Ho%C5%99ava-Witten+theory">Hořava-Witten theory</a></li>
 </ul>
 </li>
-</ul><h3 id="extended_objects">Extended objects</h3><ul>
+</ul>
+
+<h3 id="extended_objects">Extended objects</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/brane">brane</a></p>
 </li>
@@ -667,7 +711,11 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><h3 id="topological_strings">Topological strings</h3><ul>
+</ul>
+
+<h3 id="topological_strings">Topological strings</h3>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a>, <a class="existingWikiWord" href="/nlab/show/TCFT">TCFT</a></p>
 
@@ -679,7 +727,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/topological+M-theory">topological M-theory</a></p>
 </li>
-</ul><h2 id="backgrounds">Backgrounds</h2><ul>
+</ul>
+
+<h2 id="backgrounds">Backgrounds</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/target+space">target space</a>, <a class="existingWikiWord" href="/nlab/show/background+gauge+field">background gauge field</a></p>
 </li>
@@ -691,7 +743,11 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/landscape+of+string+theory+vacua">landscape of string theory vacua</a></p>
 </li>
-</ul><h2 id="phenomenology">Phenomenology</h2><ul>
+</ul>
+
+<h2 id="phenomenology">Phenomenology</h2>
+
+<ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a></p>
 
@@ -705,16 +761,30 @@ margin-left: 0em;
 </li>
 </ul>
 </li>
-</ul><div>
+</ul>
+<div>
 <p>
   <a href="/nlab/edit/string+theory+-+contents">Edit this sidebar</a>
 </p>
-</div></div>
+</div></div></div>
 </div>
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#black_hole_entropy">Black hole entropy</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#References">References</a><ul><li><a href="#introductions_and_review">Introductions and Review</a></li><li><a href="#original_articles">Original articles</a></li><li><a href="#discussion_in_bfss_matrix_theory">Discussion in BFSS matrix theory</a></li><li><a href="#relation_to_topological_string_amplitudes">Relation to topological string amplitudes</a></li></ul></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#black_hole_entropy'>Black hole entropy</a></li>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#References'>References</a></li>
+<ul>
+<li><a href='#introductions_and_review'>Introductions and Review</a></li>
+<li><a href='#original_articles'>Original articles</a></li>
+<li><a href='#discussion_in_bfss_matrix_theory'>Discussion in BFSS matrix theory</a></li>
+<li><a href='#relation_to_topological_string_amplitudes'>Relation to topological string amplitudes</a></li>
+</ul>
+</ul>
+</div>
+
 <h2 id="black_hole_entropy">Black hole entropy</h2>
 
 <p>In (<a class="existingWikiWord" href="/nlab/show/perturbative+string+theory">perturbative</a>) <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a> the <a class="existingWikiWord" href="/nlab/show/Bekenstein-Hawking+entropy">Bekenstein-Hawking entropy</a> associated to a macroscopic <a class="existingWikiWord" href="/nlab/show/black+hole">black hole</a> finds an explanation as follows:</p>
@@ -796,7 +866,10 @@ margin-left: 0em;
 </ul>
 </li>
 </ul>
-<p><strong>Table of <a class="existingWikiWord" href="/nlab/show/brane">branes</a> appearing in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>/<a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong> (for classification see at <em><a class="existingWikiWord" href="/nlab/show/brane+scan">brane scan</a></em>).</p><table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/brane">brane</a></th><th>in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></th><th><a class="existingWikiWord" href="/nlab/show/charge">charge</a>d under <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a></th><th>has <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> theory</th></tr></thead><tbody><tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/higher+gauge+field">higher gauge field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/SCFT">SCFT</a></td></tr>
+<div>
+<p><strong>Table of <a class="existingWikiWord" href="/nlab/show/brane">branes</a> appearing in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a>/<a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></strong> (for classification see at <em><a class="existingWikiWord" href="/nlab/show/brane+scan">brane scan</a></em>).</p>
+
+<table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/brane">brane</a></th><th>in <a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></th><th><a class="existingWikiWord" href="/nlab/show/charge">charge</a>d under <a class="existingWikiWord" href="/nlab/show/gauge+field">gauge field</a></th><th>has <a class="existingWikiWord" href="/nlab/show/worldvolume">worldvolume</a> theory</th></tr></thead><tbody><tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/black+brane">black brane</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/supergravity">supergravity</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/higher+gauge+field">higher gauge field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/SCFT">SCFT</a></td></tr>
 <tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/D-brane">D-brane</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/type+II+supergravity">type II</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/RR-field">RR-field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/super+Yang-Mills+theory">super Yang-Mills theory</a></td></tr>
 <tr><td style="text-align: left;"><strong><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_1"><semantics><mrow><mo stretchy="false">(</mo><mi>D</mi><mo>=</mo><mn>2</mn><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(D = 2n)</annotation></semantics></math></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/type+IIA+supergravity">type IIA</a></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_2"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_3"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D0-brane">D0-brane</a></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_4"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_98b176465de18276db8459a09527eb067a5b85f2_5"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/BFSS+matrix+model">BFSS matrix model</a></td></tr>
@@ -830,6 +903,8 @@ margin-left: 0em;
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/self-dual+string">self-dual string</a></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/self-dual+higher+gauge+field">self-dual</a> <a class="existingWikiWord" href="/nlab/show/B-field">B-field</a></td><td style="text-align: left;"></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/3-brane+in+6d">3-brane in 6d</a></td><td style="text-align: left;"></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
 </tbody></table>
+
+</div>
 <ul>
 <li><a class="existingWikiWord" href="/nlab/show/5d+supergravity">5d supergravity</a></li>
 </ul>
@@ -984,6 +1059,14 @@ margin-left: 0em;
 <li>
 <p>Alejandra Castro, Joshua M. Lapan, Alexander Maloney, Maria J. Rodriguez, <em>Black Hole Monodromy and Conformal Field Theory</em> (<a href="http://arxiv.org/abs/1303.0759">arXiv:1303.0759</a>)</p>
 </li>
+
+<li>
+<p>Francesco Benini, Paolo Milan, <em>Black holes in 4d <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding="application/x-tex">\mathcal{N} = 4</annotation></semantics></math> Super-Yang-Mills</em> (<a href="https://arxiv.org/abs/1812.09613">arXiv:1812.09613</a>)</p>
+</li>
+
+<li>
+<p>H. L. Dao, Parinya Karndumri, <em>Supersymmetric <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>AdS</mi> <mn>5</mn></msub></mrow><annotation encoding="application/x-tex">AdS_5</annotation></semantics></math> black holes and strings from 5D <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>N</mi><mo>=</mo><mn>4</mn></mrow><annotation encoding="application/x-tex">N=4</annotation></semantics></math> gauged supergravity</em> (<a href="https://arxiv.org/abs/1812.10122">arXiv:1812.10122</a>)</p>
+</li>
 </ul>
 
 <h3 id="discussion_in_bfss_matrix_theory">Discussion in BFSS matrix theory</h3>
@@ -1039,14 +1122,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September  8, 2018 at 10:54:20.
+  Last revised on December 28, 2018 at 05:01:17.
   See the <a href="https://ncatlab.org/nlab/history/black holes in string theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/black+holes+in+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/black+holes+in+string+theory/39" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(39 revisions)</span> | <a href="/nlab/show/diff/black+holes+in+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/black+holes+in+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/black+holes+in+string+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/black+holes+in+string+theory/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/black+holes+in+string+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/black+holes+in+string+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/black holes in string theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
