--- a/pages/10113.html
+++ b/pages/10113.html
@@ -1097,6 +1097,7 @@ margin-left: 0em;
 <li><a href='#references'>References</a></li>
 <ul>
 <li><a href='#general'>General</a></li>
+<li><a href='#experiment'>Experiment</a></li>
 <li><a href='#in_lattice_qcd'>In lattice QCD</a></li>
 <li><a href='#in_wittensakaisugimoto_model_for_adsqcd'>In Witten-Sakai-Sugimoto model for AdS-QCD</a></li>
 </ul>
@@ -1189,6 +1190,14 @@ margin-left: 0em;
 <li>Wikipedia, <em><a href="http://en.wikipedia.org/wiki/Meson">Hadron</a></em></li>
 </ul>
 
+<h3 id="experiment">Experiment</h3>
+
+<p>Observations at <a class="existingWikiWord" href="/nlab/show/LHC">LHC</a>:</p>
+
+<ul>
+<li>Maria Vasileiou on behalf of the ALICE Collaboration, <em>Measurement of the Hadronic Resonance Production with ALICE at the CERN LHC</em>, Universe 2019, 5(1), 6 (<a href="https://doi.org/10.3390/universe5010006">doi:10.3390/universe5010006</a>)</li>
+</ul>
+
 <h3 id="in_lattice_qcd">In lattice QCD</h3>
 
 <p>Computation of the <a class="existingWikiWord" href="/nlab/show/mass">mass</a> of hadrons using <a class="existingWikiWord" href="/nlab/show/lattice+QCD">lattice QCD</a> (see also <em><a class="existingWikiWord" href="/nlab/show/confinement">confinement</a></em> and <em><a class="existingWikiWord" href="/nlab/show/mass+gap+problem">mass gap problem</a></em>) is discussed in</p>
@@ -1260,14 +1269,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on December  3, 2018 at 08:59:54.
+  Last revised on December 28, 2018 at 08:04:55.
   See the <a href="https://ncatlab.org/nlab/history/hadron" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/hadron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hadron/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/hadron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hadron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/hadron" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hadron/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/hadron" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hadron" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/hadron/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
